--- a/.github/workflows/build-gem.yml
+++ b/.github/workflows/build-gem.yml
@@ -11,15 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up ruby 2.6
-      uses: actions/setup-ruby@v1
+    - uses: actions/checkout@v3
+
+    - name: Set up ruby 2.7
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.6.x
+        ruby-version: 2.7
+    
     - name: rspec
       run: |
         gem install rspec
         rspec
+    
     - name: build gem
       run: |
         gem build cfn-vpn.gemspec
