--- a/.github/workflows/release-gem.yml
+++ b/.github/workflows/release-gem.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
     - name: Check out the repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     
-    - name: Set up Ruby 2.7
-      uses: actions/setup-ruby@v1
+    - name: Set up ruby 2.7
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7.x
+        ruby-version: 2.7
     
     - name: rspec
       run: |
